Polished the webview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.mcdenny.alc4phase1"
+        applicationId "com.dentech.alc4phase1"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
