--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.mcdenny.alc4phase1">
+    package="com.dentech.alc4phase1">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -13,17 +13,17 @@
         android:networkSecurityConfig="@xml/andela_network_config"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.mcdenny.alc4phase1.Activity_C">
+        <activity android:name="com.dentech.alc4phase1.Activity_C">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mcdenny.alc4phase1.MainActivity"/>
+                android:value="com.dentech.alc4phase1.MainActivity"/>
         </activity>
-        <activity android:name="com.mcdenny.alc4phase1.Activity_B" >
+        <activity android:name="com.dentech.alc4phase1.Activity_B" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mcdenny.alc4phase1.MainActivity"/>
+                android:value="com.dentech.alc4phase1.MainActivity"/>
         </activity>
-        <activity android:name="com.mcdenny.alc4phase1.MainActivity">
+        <activity android:name="com.dentech.alc4phase1.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
